# 202507-atma-cup

./: .gitignore  README.md  pyproject.toml  test.ipynb
results/: output_lr.csv  output_lr_balanced.csv  output_xgb.csv
sample/20240708/: sample_1.ipynb  sample_2.ipynb  演習01_データ理解_タイタニック生存データ.ipynb  演習02_データ準備_顧客売上データ.ipynb  演習03_数値予測_都心マンション価格.ipynb  演習04_クラス分類_タイタニック生存データ.ipynb  演習05_クラスタリング_自動車メーカーの評価.ipynb  演習06_アソシエーション分析による同時購入分析.ipynb  演習07_形態素解析・Word2Vecトライアル.ipynb
sample/20240806/: 演習02-03_不良要因の分析・不良モードの分類.ipynb  演習03_様々なクラスタリングデモ(都道府県データ分析).ipynb  演習04_アソシエーション分析_POSデータ.ipynb  演習04_アソシエーション分析による不良頻出パターンの抽出.ipynb
sample/20240820/: 演習02_画像分析_鋳造部品の不良分類.ipynb  演習03_自動車不具合情報のテキストデータ分析.ipynb  総合演習_分析例・モデルチューニング.ipynb
