[tool.poetry]
name = "202507-atma-cup"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "202507_atma_cup" }]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.3.1"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
jupyterlab = "^4.4.5"
scikit-learn = "^1.7.1"
xgboost = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
